--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: ROI.plugin.mosek
 Version: 0.3-0
 Title: 'Mosek' Plug-in for the 'R' Optimization Infrastructure
-Author: Florian Schwendinger [aut, cre]
-Maintainer: Florian Schwendinger <FlorianSchwendinger@gmx.at>
+Authors@R: c(
+    person("Florian", "Schwendinger", role = c("aut", "cre"), email = "FlorianSchwendinger@gmx.at"),
+    person("Benjamin", "Schwendinger", role = "ctb"))
 Description: Enhances the R Optimization Infrastructure ('ROI') package
 	     with the 'Mosek' solver. This package was built and tested
-         with 'Rmosek_8.1.3'. More information about the system requirements 
+         with 'Rmosek_9.2.3'. More information about the system requirements 
          and the installation can be found in the 'README.md' file.
 Imports: stats, methods, Matrix, slam, ROI (>= 0.3-0), Rmosek
-SystemRequirements: MOSEK (>= 8) and MOSEK License
+SystemRequirements: MOSEK (>= 9) and MOSEK License
 License: GPL-3
 URL: https://R-Forge.R-project.org/projects/roi
 
