--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ importFrom("methods", "getFunction")
 importFrom("stats", "setNames", "terms")
 importFrom("Matrix", "sparseMatrix")
 importFrom("slam", "simple_triplet_matrix")
+importFrom("stats", "aggregate")
